--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 
 # Ignore files
-gemfile.lock
+Gemfile.lock
 
 # Ignore bundler config.
 /.bundle
